syntax = "proto3";

package messaging;

service MessagingService {
    rpc sendMessage(MessageRequest) returns (MessageResponse);
    rpc getMessagesForUser(UserRequest) returns (MessagesResponse);
}

message MessageRequest {
    string sender = 1;
    string receiver = 2;
    string message = 3;
}

message MessageResponse {
    string status = 1;
}

message UserRequest {
    string username = 1;
}

message MessagesResponse {
    repeated string messages = 1;
}